Rearranged a whole bunch of stuff and added some management bits (privilege demotion, etc), added upstart script, distutils script and debian package information

--- a/.hgignore
+++ b/.hgignore
@@ -10,3 +10,12 @@ syntax: glob
 *.orig
 session-*
 build
+dist
+debian/rbvm
+debian/files
+debian/pycompat
+debian/python-module-stampdir/rbvm
+debian/rbvm.postinst.debhelper
+debian/rbvm.prerm.debhelper
+debian/rbvm.substvars
+debian/rbvm.preinst.debhelper
