Added change email and password functions

--- a/debian/control
+++ b/debian/control
@@ -12,4 +12,5 @@ Architecture: any
 Depends: adduser, qemu-kvm, uml-utilities, bridge-utils, python-sqlalchemy, python-cherrypy3, python-genshi, ${python:Depends}, ${misc:Depends}
 XB-Python-Version: ${python:Versions}
 Description: The Redbrick VM Management software
- Provides a web interface for managing virtual machines, originally intended to run behind the Redbrick VM services. Currently supports KVM virtualisation.
+ Provides a web interface for managing virtual machines, originally intended
+ to run behind the Redbrick VM services. Currently supports KVM virtualisation.
